# email-chat-rs

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PROJECT.md  README.md
.cargo/: config.toml
.qwen/: settings.json
.qwen/skills/rust-engineer/: SKILL.md
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  main.rs  runtime.rs  state.rs
apps/desktop/src/views/: chat.rs  compose.rs  contacts.rs  conversation_settings.rs  login.rs  mod.rs  sidebar.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  integration.rs  lib.rs
crates/core/src/models/: account.rs  contact.rs  conversation.rs  message.rs  mod.rs
crates/core/src/ports/: email.rs  keystore.rs  mod.rs  storage.rs
crates/core/src/services/: account.rs  chat.rs  contacts.rs  group.rs  history_restorer.rs  mod.rs
crates/core/src/sync/: engine.rs  mod.rs  processor.rs
crates/email/: Cargo.toml
crates/email/src/: codec.rs  integration.rs  lib.rs  types.rs
crates/email/src/imap/: mod.rs
crates/email/src/providers/: gmail.rs  mailru.rs  mod.rs  yandex.rs
crates/email/src/smtp/: mod.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: cipher.rs  disguise.rs  export.rs  group.rs  handshake.rs  integration.rs  keypair.rs  lib.rs  session.rs
crates/platform/: Cargo.toml
crates/platform/src/: email_adapter.rs  lib.rs  storage_adapter.rs
crates/platform/src/keystore/: android.rs  desktop.rs  ios.rs  mod.rs
crates/storage/: Cargo.toml  storage.db
crates/storage/migrations/: 003_conversations.sql  004_messages.sql  005_conversation_keys.sql  006_message_error.sql
crates/storage/src/: account_repo.rs  contact_repo.rs  conversation_keys_repo.rs  conversation_repo.rs  integration.rs  lib.rs  message_repo.rs  models.rs
crates/storage/src/migrations/: 001_accounts.sql  002_contacts.sql  004_messages.sql
