[workspace]
resolver = "2"

members = [
    "crates/encryption",
    # Будут добавлены по мере разработки:
    # "crates/core",
    # "crates/email",
    # "crates/storage",
    # "crates/platform",
    # "apps/desktop",
    # "apps/mobile",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
# repository  = "https://github.com/yourname/email-chat"

# Общие зависимости — версии задаём один раз здесь,
# крейты подключают через workspace = true
[workspace.dependencies]
# Async
tokio        = { version = "1",    features = ["full"] }

# Сериализация
serde        = { version = "1",    features = ["derive"] }
serde_json   = { version = "1" }

# Ошибки
thiserror    = { version = "1" }
anyhow       = { version = "1" }

# Время
chrono       = { version = "0.4",  features = ["serde"] }

# ID
uuid         = { version = "1",    features = ["v4", "serde"] }

# Крипто
x25519-dalek       = { version = "2",   features = ["static_secrets"] }
ed25519-dalek      = { version = "2",   features = ["rand_core"] }
chacha20poly1305   = { version = "0.10" }
argon2             = { version = "0.5" }
rand               = { version = "0.8" }
rand_core          = { version = "0.6" }
sha2               = { version = "0.10" }
hkdf               = { version = "0.12" }
bip39              = { version = "2" }
zeroize            = { version = "1",   features = ["derive"] }

# QR-код
qrcode   = { version = "0.14" }
image    = { version = "0.25" }

# Тесты
hex = { version = "0.4" }