[workspace]
resolver = "2"

members = [
    "crates/encryption",
    "crates/email",
    "crates/storage",
    "crates/core",
    "crates/platform",
    "apps/desktop",
]

[workspace.package]
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
# repository  = "https://github.com/yourname/email-chat"

[workspace.dependencies]
# Async
tokio        = { version = "1",    features = ["full"] }

# Сериализация
serde        = { version = "1",    features = ["derive"] }
serde_json   = { version = "1" }

# Ошибки
thiserror    = { version = "1" }
anyhow       = { version = "1" }

# Время
chrono       = { version = "0.4",  features = ["serde"] }

# ID
uuid         = { version = "1",    features = ["v4", "serde"] }

# Крипто
x25519-dalek       = { version = "2",   features = ["static_secrets"] }
ed25519-dalek      = { version = "2",   features = ["rand_core"] }
chacha20poly1305   = { version = "0.10" }
argon2             = { version = "0.5" }
rand               = { version = "0.8" }
rand_core          = { version = "0.6" }
sha2               = { version = "0.10" }
hkdf               = { version = "0.12" }
bip39              = { version = "2" }
zeroize            = { version = "1",   features = ["derive"] }

# QR-код
qrcode   = { version = "0.14" }
image    = { version = "0.25" }

# Email — IMAP/SMTP
async-imap       = { version = "0.9", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5" }
lettre           = { version = "0.11", default-features = false, features = [
    "builder", "tokio1", "tokio1-native-tls", "smtp-transport",
] }
mail-parser      = { version = "0.9" }
tokio-native-tls = { version = "0.3" }
native-tls       = { version = "0.2" }
base64           = { version = "0.22" }

# SQLite
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "tls-native-tls", "sqlite", "macros", "migrate", "chrono", "uuid",
] }

# Keystore
keyring = { version = "3", features = ["tokio"] }

# UI
eframe  = { version = "0.29", features = ["persistence"] }
egui    = { version = "0.29" }
egui_extras = { version = "0.29", features = ["image"] }

# Логирование
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Тесты
hex         = { version = "0.4" }
tokio-test  = { version = "0.4" }
async-trait = "0.1.84"
