[package]
name        = "storage"
description = "SQLite persistence layer for email-chat"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
# repository.workspace = true

[dependencies]
# SQLite
sqlx = { workspace = true }

# Сериализация
serde      = { workspace = true }
serde_json = { workspace = true }

# Утилиты
thiserror = { workspace = true }
chrono    = { workspace = true }
uuid      = { workspace = true }
tracing   = { workspace = true }
tokio     = { workspace = true }

[dev-dependencies]
tokio-test         = { workspace = true }
tracing-subscriber = { workspace = true }
